Adding route to fetch all group members